# abeargs

./: .gitignore  AbeArgs.code-workspace  CMakeLists.txt  README.md
abeargs_lib/: AbeMath.h  Argument.cpp  Argument.h  CMakeLists.txt  Parser.cpp
abeargs_tests/: CMakeLists.txt  ParserTests.cpp  ParserTests.h
lib/: Argument.cpp  Argument.h  CMakeLists.txt  MSVC.h  Math.h  Parser.cpp  Parser.h  Util.h  abeargs.h
lib/include/abeargs/: Defaults.h  abeargs.h
test/: .clang-format  CMakeLists.txt  ParserTests.cpp  main.cpp
tests/: CMakeLists.txt  ParserTests.cpp  ParserTests.h  main.cpp
